# murmur

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/publish/: SKILL.md
.github/workflows/: ci.yml  coverage.yml  publish.yml
crates/murmur/: Cargo.toml
crates/murmur-copilot/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
crates/murmur-copilot/src/: App.ts  history.ts  index.html  main.ts  styles.css  transcript.ts
crates/murmur-copilot/src-tauri/: Cargo.toml  tauri.conf.json
crates/murmur-copilot/src-tauri/capabilities/: default.json
crates/murmur-copilot/src-tauri/src/: commands.rs  llm.rs  main.rs  meeting.rs  overlay.rs  session.rs
crates/murmur-core/: Cargo.toml
crates/murmur-core/src/: config.rs  error.rs  lib.rs  models.rs  update.rs  util.rs
crates/murmur-core/src/audio/: activate.rs  capture.rs  capture_state.rs  denoise.rs  mod.rs  recordings.rs  resample.rs  speaker.rs  system_capture.rs
crates/murmur-core/src/config/: catalog.rs  mod.rs  persistence.rs  policy.rs  schema.rs
crates/murmur-core/src/context/: mod.rs
crates/murmur-core/src/input/: mod.rs  wake_word.rs
crates/murmur-core/src/llm/: mod.rs  ollama.rs  prompt.rs
crates/murmur-core/src/transcription/: engine.rs  factory.rs  mel.rs  mlx_engine.rs  mod.rs  model.rs  model_discovery.rs  parakeet_engine.rs  postprocess.rs  prompt.rs  qwen_engine.rs  streaming.rs  subprocess.rs  transcriber.rs  vad.rs  whisper_engine.rs
crates/murmur-core/src/transcription/mlx/: cache.rs  config.rs  decoder.rs  encoder.rs  mod.rs  model.rs
crates/murmur-core/src/transcription/streaming/: chunked.rs  mod.rs  native.rs
crates/murmur/src/: lib.rs  main.rs  notes.rs
crates/murmur/src/app/: effects.rs  messages.rs  mod.rs  recording_state.rs  state.rs  state_config.rs
crates/murmur/src/app/effects/: config.rs  engine.rs  mod.rs  overlay.rs  recording.rs  wake_word.rs
crates/murmur/src/context/: app_detector.rs  cursor.rs  mod.rs
crates/murmur/src/input/: hotkey.rs  inserter.rs  keycodes.rs  wake_word.rs
crates/murmur/src/platform/: ax.rs  mod.rs  permissions.rs
crates/murmur/src/ui/: mod.rs  overlay.rs  tray.rs
crates/murmur/src/ui/tray/: icons.rs  linux_icon_cache.rs  menu.rs  mod.rs  native_icon_cache.rs  state.rs
crates/murmur/tests/: audio_pipeline.rs  cli_e2e.rs  config_integration.rs  effect_integration.rs  integration.rs  perf_pipeline.rs  postprocess_integration.rs  recording_store.rs
crates/murmur/tests/helpers/: mod.rs
docs/: copilot-implementation-plan.md  feature-research.md  gui-implementation.md  index.html
hooks/: pre-push
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: app.rs  audio.rs  config.rs  hotkey.rs  inserter.rs  keycodes.rs  lib.rs  main.rs  model.rs  permissions.rs  postprocess.rs  recordings.rs  streaming.rs  transcriber.rs  tray.rs
src/app/: effects.rs  mod.rs  state.rs
src/audio/: capture.rs  mod.rs
src/context/: app_detector.rs  cursor.rs  mod.rs  provider.rs  system_state.rs  title_analyzer.rs
src/input/: hotkey.rs  inserter.rs  keycodes.rs  mod.rs  wake_word.rs
src/platform/: permissions.rs
src/transcription/: mod.rs  model.rs  postprocess.rs  streaming.rs  transcriber.rs  vad.rs
src/ui/: mod.rs  overlay.rs  tray.rs
tests/: audio_pipeline.rs  config_integration.rs  context_integration.rs  effect_integration.rs  integration.rs  postprocess_integration.rs  recording_store.rs
