[package]
name = "murmur-core"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core transcription engine for murmur — audio capture, Whisper transcription, VAD, and context abstractions."

[dependencies]
whisper-rs = { version = "0.16", optional = true }
cpal = "0.17"
hound = "3.5"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
dirs = "6"
regex = "1"
anyhow = "1"
thiserror = "2"
voice_activity_detector = "0.2"
log = "0.4"
nnnoiseless = "0.5"
env_logger = "0.11"
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.17", optional = true, default-features = false, features = ["std"] }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
half = { version = "2", optional = true }
realfft = { version = "3", optional = true }
mlx-rs = { version = "0.25", optional = true }

[[bin]]
name = "murmur-whisper-worker"
path = "src/bin/whisper_worker.rs"
required-features = ["whisper"]

[features]
default = ["onnx"]
whisper = ["dep:whisper-rs"]
onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers", "dep:half", "dep:realfft"]
mlx = ["dep:mlx-rs", "dep:tokenizers", "dep:half", "dep:realfft"]
cuda = ["whisper", "whisper-rs/cuda"]
metal = ["whisper", "whisper-rs/metal"]
vulkan = ["whisper", "whisper-rs/vulkan"]

[dev-dependencies]
tempfile = "3"
