[package]
name = "murmur-copilot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Tauri-based meeting copilot with live streaming transcription overlay."

[dependencies]
murmur-core = { version = "0.1.2", path = "../../murmur-core" }
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
raw-window-handle = "0.6"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
